<resources>
    <string name="app_name">Jukir</string>
    <string name="already_have_account">Already have an Account?</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="signup_now">Sign up now</string>
    <string name="welcome_to_jukir">Welcome to JUKIR</string>
    <string name="welcome_message">We are here to make your parking experience way better!</string>
    <string name="are_you_new">Are you new here?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_password">Re-Entry Password</string>
    <string name="re_new_password">Re-Entry New Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="signin_message">Welcome back,\nyou have been missed</string>
    <string name="signup_message">Fill up your information.</string>
    <string name="lets_signin">Lets sign you in</string>
    <string name="agree_term">By signing up it means you agree to the Terms and Condition</string>
    <string name="empty_username">Username cannot be empty!</string>
    <string name="empty_password">Password cannot be empty!</string>
    <string name="empty_old_password">Old password cannot be empty!</string>
    <string name="empty_new_password">New password cannot be empty!</string>
    <string name="empty_email">Email cannot be empty!</string>
    <string name="empty_phone_number">Phone number cannot be empty!</string>
    <string name="empty_re_password">Re-entry password cannot be empty!</string>
    <string name="empty_re_new_password">Re-entry new password cannot be empty!</string>
    <string name="empty_ticket_number">Ticket number cannot be empty!</string>
    <string name="password_not_match">Confirm password does not match!</string>
    <string name="loading">Please wait</string>
    <string name="success_login">Login successfully</string>
    <string name="success_register">Register successfully. Please login!</string>
    <string name="server_error">Server error</string>
    <string name="wrong_account">Your username or password is wrong</string>
    <string name="must_agree">You must agree with our terms and condition!</string>
    <string name="home_message">Lets find you a perfect Parking Place</string>
    <string name="search_parking">Search for a parking place</string>
    <string name="list_building_label">Parking places near you</string>
    <string name="signout">Sign Out</string>
    <string name="search">Search</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_message">Do not Forget!</string>
    <string name="submit_new_password">Submit New Password</string>
    <string name="topup">Top Up</string>
    <string name="wrong_old_password">Your old password does not match</string>
    <string name="success_change_password">Your password has been change successfully</string>
    <string name="success_topup">Top up successfully</string>
    <string name="success_pay">Driver payment has been successfully</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="input">Input</string>
    <string name="input_amount">Input Amount</string>
    <string name="or">or</string>
    <string name="empty_amount">Please enter your amount!</string>
    <string name="filled">Filled</string>
    <string name="empty">Empty</string>
    <string name="parking_slots">Parking Slots</string>
    <string name="see_parking_slots">See Parking Slots</string>
    <string name="report">Report</string>
    <string name="total_car">Total Car</string>
    <string name="total_transaction">Total Transaction</string>
    <string name="total_income">Total Income</string>
    <string name="click_see_detail">Click here to see detail</string>
    <string name="scan_parking_tickets">Scan Parking Tickets</string>
    <string name="enter_ticket_number">Or, Enter Ticket Number</string>
    <string name="enter_number">Enter Number</string>
    <string name="submit">Submit</string>
    <string name="please_scan">Please Scan Barcode Inside This Area</string>
    <string name="auto_scan">Scanning Will Start Automatically</string>
    <string name="total_cost">Total Cost</string>
    <string name="cash">Cash</string>
    <string name="ecard">E-Card</string>
    <string name="scan">Scan</string>
    <string name="label_scan_building">Scan Barcode to Start Collecting E-Ticket</string>
    <string name="label_scan_slot">Scan Barcode to Start Saving Your Parking Location</string>
    <string name="total_charged">Total charged:</string>
    <string name="total_change">Total change:</string>
    <string name="detail_parking">Detail Parking</string>
    <string name="detail_payment">Detail Payment</string>
    <string name="date">Date</string>
    <string name="parking_time">Parking Time</string>
    <string name="parking_spot">Parking Spot</string>
    <string name="parking_fee">Parking Fee</string>
    <string name="choose_payment">Choose Payment</string>
    <string name="ecard_payment">E-Card Payment</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="pay">Pay</string>
    <string name="input_driver_money">Input Driver Money</string>
    <string name="done">Done</string>
    <string name="driver_money">Driver Money</string>
    <string name="data_not_found">Data not found</string>
</resources>